--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,18 @@
-click==6.7
+Click==7.0
+dnspython==1.16.0
 enum-compat==0.0.2
-eventlet==0.21.0
-Flask==0.12.2
-Flask-Login==0.4.0
+eventlet==0.24.1
+Flask==1.0.2
+Flask-Login==0.4.1
 Flask-Session==0.3.1
-Flask-SocketIO==2.9.2
-greenlet==0.4.12
-itsdangerous==0.24
-Jinja2==2.7.3
-MarkupSafe==0.23
-python-engineio==1.7.0
-python-socketio==1.8.0
-six==1.9.0
-Werkzeug==0.12.2
+Flask-SocketIO==3.1.2
+greenlet==0.4.15
+itsdangerous==1.1.0
+Jinja2==2.10
+MarkupSafe==1.1.0
+monotonic==1.5
+pkg-resources==0.0.0
+python-engineio==3.2.3
+python-socketio==3.1.1
+six==1.12.0
+Werkzeug==0.14.1
