Client can change name

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,9 @@
 Click==7.0
-dnspython==1.16.0
-enum-compat==0.0.2
-eventlet==0.24.1
 Flask==1.0.2
-Flask-Login==0.4.1
-Flask-Session==0.3.1
-Flask-SocketIO==3.1.2
-greenlet==0.4.15
+Flask-WTF==0.14.2
 itsdangerous==1.1.0
 Jinja2==2.10
 MarkupSafe==1.1.0
-monotonic==1.5
-python-engineio==3.2.3
-python-socketio==3.1.1
-six==1.12.0
+pkg-resources==0.0.0
 Werkzeug==0.14.1
+WTForms==2.2.1
